Fix shifting team pics on hover

--- a/style/main.css
+++ b/style/main.css
@@ -522,8 +522,8 @@ nav .icon {
 	position: absolute;
     background: white;
     z-index: 1000;
-    top: -20px;
-    left: -30px;
+    top: -19.5px;
+    left: -37px;
     height: 385px;
     width: 230px;
     padding: 20px;
